--- a/.github/workflows/build-single-istoreos-rockchip.yml
+++ b/.github/workflows/build-single-istoreos-rockchip.yml
@@ -204,6 +204,7 @@ jobs:
         df -hT $PWD
         git clone $REPO_URL -b $REPO_BRANCH openwrt --single-branch
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
+        cd openwrt
         sed -i '$a src-git lunatic7 https://github.com/lunatickochiya/actionbased-openwrt-packages.git' feeds.conf.default
         sed -i 's|https://github.com/jjm2473/packages.git|https://github.com/lunatickochiya/istoreos-packages-2203.git|' feeds.conf.default
         $GITHUB_WORKSPACE/$DIY_SH patch-openwrt
